<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button_panel_root"
    >

    <io.github.toyota32k.viewex.library.Viewbox
        android:id="@+id/control_buttons_viewbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/control_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <ImageButton
                android:id="@+id/prev_video_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_prev"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_prev_video" />

            <ImageButton
                android:id="@+id/prev_chapter_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_prev_chapter"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_prev_chapter" />

            <ImageButton
                android:id="@+id/seek_back_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_prev"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_back" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_play"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_play" />

            <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_pause"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_pause" />

            <ImageButton
                android:id="@+id/seek_forward_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_next"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_forward" />

            <ImageButton
                android:id="@+id/next_chapter_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_next_chapter"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_next_chapter" />

            <ImageButton
                android:id="@+id/next_video_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_next"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_next_video" />

            <ImageButton
                android:id="@+id/snapshot_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_camera"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_snapshot" />

            <ImageButton
                android:id="@+id/rotate_left"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_rotate_left"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_rotate_left" />
            <ImageButton
                android:id="@+id/rotate_right"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_rotate_right"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_rotate_right" />

            <ImageButton
                android:id="@+id/pinp_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_pinp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_pinp" />

            <ImageButton
                android:id="@+id/fullscreen_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_fullscreen"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_fullscreen" />

            <ImageButton
                android:id="@+id/collapse_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_collapse"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_collapse"
                android:visibility="gone"
                />

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_close"
                android:background="?attr/selectableItemBackground"
                android:visibility="gone"
                android:contentDescription="@string/desc_close_button" />
        </LinearLayout>
    </io.github.toyota32k.viewex.library.Viewbox>

</FrameLayout>