<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/control_panel_root"
    >
    <io.github.toyota32k.viewex.library.Viewbox
        android:id="@+id/control_buttons_viewbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/slider_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:id="@+id/control_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_play"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_play" />

            <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_pause"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_pause" />

            <ImageButton
                android:id="@+id/seek_back_s_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_forward_s"
                android:rotationY="180"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_back" />
            <ImageButton
                android:id="@+id/seek_forward_s_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_forward_s"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_forward" />

            <ImageButton
                android:id="@+id/seek_back_m_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_forward_m"
                android:rotationY="180"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_back" />
            <ImageButton
                android:id="@+id/seek_forward_m_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_forward_m"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_forward" />

            <ImageButton
                android:id="@+id/seek_back_l_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_forward_l"
                android:rotationY="180"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_back" />
            <ImageButton
                android:id="@+id/seek_forward_l_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_seek_forward_l"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_seek_forward" />

            <ImageButton
                android:id="@+id/prev_chapter_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_prev_chapter"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_prev_chapter" />
            <ImageButton
                android:id="@+id/next_chapter_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_next_chapter"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_next_chapter" />

            <ImageButton
                android:id="@+id/prev_video_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_prev"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_prev_video" />
            <ImageButton
                android:id="@+id/next_video_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_next"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_next_video" />

            <ImageButton
                android:id="@+id/snapshot_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_camera"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_snapshot" />

            <ImageButton
                android:id="@+id/rotate_left"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_rotate_left"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_rotate_left" />
            <ImageButton
                android:id="@+id/rotate_right"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_rotate_right"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_rotate_right" />

            <ImageButton
                android:id="@+id/lock_slider_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_unlocked"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_lock_slider" />
            <ImageButton
                android:id="@+id/unlock_slider_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_locked"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_unlock_slider" />


            <ImageButton
                android:id="@+id/pinp_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_pinp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_pinp" />

            <ImageButton
                android:id="@+id/fullscreen_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_fullscreen"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_fullscreen" />

            <ImageButton
                android:id="@+id/collapse_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_collapse"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_collapse"
                android:visibility="gone"
                />

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="@dimen/media_button_width"
                android:layout_height="@dimen/media_button_height"
                app:srcCompat="@drawable/ic_close"
                android:background="?attr/selectableItemBackground"
                android:visibility="gone"
                android:contentDescription="@string/desc_close_button" />
        </LinearLayout>
    </io.github.toyota32k.viewex.library.Viewbox>
    <io.github.toyota32k.lib.player.view.SliderPanel
        android:id="@+id/slider_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:ampAttrsByParent="true"
        />

    <FrameLayout
        android:id="@+id/slider_guard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/slider_panel"
        app:layout_constraintBottom_toBottomOf="@+id/slider_panel"
        app:layout_constraintStart_toStartOf="@+id/slider_panel"
        app:layout_constraintEnd_toEndOf="@+id/slider_panel"
        android:background="#0000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>